# sokka

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/map/: Foreground.json
assets/shaders/: basic.frag  basic.vert
assets/sprites/: tileset.aseprite
include/core/: Application.hpp  Base.hpp  Window.hpp
include/sokka/core/: Application.hpp  Base.hpp  Input.hpp  Logger.hpp  Time.hpp  Window.hpp
include/sokka/editor/: RoomTool.hpp  Tool.hpp
include/sokka/graphics/: Camera.hpp  FrameBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vector2.hpp
include/sokka/ui/: Canvas.hpp  GUI.hpp  Menubar.hpp  UIPanel.hpp
include/ui/: GUI.hpp
src/: AutoTiler.cpp  AutoTiler.hpp  Canvas.cpp  Canvas.hpp  EditorApp.cpp  EditorApp.hpp  EditorTool.hpp  GUI.cpp  GUI.hpp  Logger.hpp  Menubar.cpp  Menubar.hpp  Texture.cpp  Texture.hpp  TilePallete.cpp  TilePallete.hpp  Tilemap.hpp  Tileset.cpp  Tileset.hpp  main.cpp
src/core/: Application.cpp  Window.cpp
src/sokka/: main.cpp
src/sokka/core/: Application.cpp  Input.cpp  Time.cpp  Window.cpp
src/sokka/graphics/: Camera.cpp  FrameBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/sokka/ui/: Canvas.cpp  GUI.cpp  Menubar.cpp
src/ui/: GUI.cpp
